# Botory

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  botory.service  commands-setup.js  commands.json  config.json  db.js  index.js  localtunnel.service  ltrun.sh  mdrs.py  package-lock.json  package.json  requirements  run.py  run.sh
.github/ISSUE_TEMPLATE/: ----.md
cogs/: AutoSaver.py  Banisher.py  BusterCall.py  Captcha.py  DMLogger.py  Filter.py  Logger.py  MessageManager.py  Moderator.py  Money.py  Onoff.py  Prefix.py  Raid.py  Rank.py  Reactor.py  Status.py  StudioLink.py  Threading.py  Toto.py  Warner.py  __init__.py
oauth/: main.py  oauth2bot.service
oauth/static/: style.css
oauth/templates/: final.html  index.html  join.html
pkgs/: Money.py  Status.py  XP.py
src/: main.cpp
submodules/: Bank.js  BoostEvent.js  Docs.js  Filter.js  Logger.js  MessageManager.js  Moderator.js  Raid.js  Rank.js  ReactionRole.js  Report.js  SQL.js  Status.js  Timers.js  Toto.js  Youtube.js
submodules/Loggers/: AuditLoggers.json  Channel.js  File.js  Guild.js  Member.js  Message.js  Reaction.js  Voice.js  config.json
